Switched to init to config_entry configuration. Use of async-methods during platform setup.

--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,9 @@
 {
   "domain": "boschshc",
   "name": "Bosch Smart Home Interface",
+  "config_flow": true,
   "documentation": "",
   "requirements": [],
-  "ssdp": {},
   "homekit": {},
   "dependencies": [],
   "codeowners": [
