only set cover state to opening/closing when cover is actually moving

--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
   "name": "Bosch Smart Home Interface",
   "config_flow": true,
   "documentation": "",
-  "requirements": [],
+  "requirements": ["requests", "python-dateutil"],
   "homekit": {},
   "dependencies": [],
   "codeowners": [
