--- a/bshlocal/manifest.json
+++ b/bshlocal/manifest.json
@@ -1,8 +1,8 @@
 {
   "domain": "bshlocal",
   "name": "Bosch Smart Home Local API",
-  "documentation": "https://www.example.com",
+  "documentation": "",
   "dependencies": [],
-  "codeowners": ["Clemens-Alexander Brust"],
-  "requirements": ["bshlocal==0.0.2"]
+  "codeowners": ["@cabrust"],
+  "requirements": ["bshlocal==0.0.7"]
 }
