--- a/boschshc/services.yaml
+++ b/boschshc/services.yaml
@@ -4,3 +4,10 @@ smokedetector_check:
     entity_id:
       description: Name(s) of the entities to set
       example: "binary_sensor.smokedetector_living_room"
+
+trigger_scenario:
+  description: Triggers a scenario on the Bosch SHC.
+  fields:
+    name:
+      description: Name of the scenario to trigger
+      example: "Scenario Name"
