Changes from ha-core bosch_shc. Renamed integration from boschshc to bosch_shc Enabled zeroconf discovery of integration Provide unique_id for shc bridge

--- a/bosch_shc/services.yaml
+++ b/bosch_shc/services.yaml
@@ -6,7 +6,7 @@ smokedetector_check:
       example: "binary_sensor.smokedetector_living_room"
 
 trigger_scenario:
-  description: Triggers a scenario on the Bosch SHC.
+  description: Triggers a Bosch SHC scenario.
   fields:
     name:
       description: Name of the scenario to trigger
