--- a/bosch_shc/services.yaml
+++ b/bosch_shc/services.yaml
@@ -1,13 +1,23 @@
 smokedetector_check:
-  description: Calls test routine of Bosch Smoke Detector.
+  description: Calls test routine of a smoke detector.
   fields:
     entity_id:
-      description: Name(s) of the entities to set
+      description: Name of the smoke detector entity to set
       example: "binary_sensor.smokedetector_living_room"
 
 trigger_scenario:
-  description: Triggers a Bosch SHC scenario.
+  description: Triggers a scenario on Bosch SHC.
   fields:
     name:
       description: Name of the scenario to trigger
       example: "Scenario Name"
+
+smokedetector_alarmstate:
+  description: Triggers a custom alarm state on a smoke detector.
+  fields:
+    entity_id:
+      description: Name of the smoke detector entity to set
+      example: "binary_sensor.smokedetector_living_room"
+    command:
+      description: "Command string to send to the smoke detector."
+      example: "CUSTOM_COMMAND"
