--- a/bosch_shc/manifest.json
+++ b/bosch_shc/manifest.json
@@ -7,6 +7,7 @@
   "zeroconf": [
     {"type": "_http._tcp.local.", "name": "bosch shc*"}
   ],
+  "issue_tracker": "https://github.com/tschamm/boschshc-hass/issues",
   "codeowners": ["@tschamm"],
   "after_dependencies": ["zeroconf"]
 }
