--- a/custom_components/bosch_shc/manifest.json
+++ b/custom_components/bosch_shc/manifest.json
@@ -3,11 +3,12 @@
   "name": "Bosch SHC",
   "config_flow": true,
   "documentation": "https://github.com/tschamm/boschshc-hass/blob/master/README.md",
-  "requirements": ["boschshcpy==0.2.13"],
-  "version": "0.3.4",
+  "requirements": ["boschshcpy==0.2.15"],
+  "version": "0.4.0",
   "zeroconf": [
     {"type": "_http._tcp.local.", "name": "bosch shc*"}
   ],
+  "iot_class": "local_push",
   "issue_tracker": "https://github.com/tschamm/boschshc-hass/issues",
   "codeowners": ["@tschamm"],
   "after_dependencies": ["zeroconf"]
