--- a/custom_components/bosch_shc/manifest.json
+++ b/custom_components/bosch_shc/manifest.json
@@ -3,8 +3,8 @@
   "name": "Bosch SHC",
   "config_flow": true,
   "documentation": "https://github.com/tschamm/boschshc-hass/blob/master/README.md",
-  "requirements": ["boschshcpy==0.2.16.dev1"],
-  "version": "0.4.2.dev0",
+  "requirements": ["boschshcpy==0.2.17"],
+  "version": "0.4.2",
   "zeroconf": [
     {"type": "_http._tcp.local.", "name": "bosch shc*"}
   ],
