--- a/custom_components/bosch_shc/manifest.json
+++ b/custom_components/bosch_shc/manifest.json
@@ -4,10 +4,8 @@
   "config_flow": true,
   "documentation": "https://github.com/tschamm/boschshc-hass/blob/master/README.md",
   "requirements": ["boschshcpy==0.2.24"],
-  "version": "0.4.18",
-  "zeroconf": [
-    {"type": "_http._tcp.local.", "name": "bosch shc*"}
-  ],
+  "version": "0.4.19",
+  "zeroconf": [{ "type": "_http._tcp.local.", "name": "bosch shc*" }],
   "iot_class": "local_push",
   "issue_tracker": "https://github.com/tschamm/boschshc-hass/issues",
   "codeowners": ["@tschamm"],
