--- a/custom_components/bosch_shc/manifest.json
+++ b/custom_components/bosch_shc/manifest.json
@@ -3,7 +3,7 @@
   "name": "Bosch SHC",
   "config_flow": true,
   "documentation": "https://github.com/tschamm/boschshc-hass/blob/master/README.md",
-  "requirements": ["boschshcpy==0.2.37"],
+  "requirements": ["git+https://github.com/beilm/boschshcpy.git#boschshcpy==0.2.37.1"],
   "version": "0.4.36",
   "zeroconf": [{ "type": "_http._tcp.local.", "name": "bosch shc*" }],
   "iot_class": "local_push",
