--- a/custom_components/bosch_shc/manifest.json
+++ b/custom_components/bosch_shc/manifest.json
@@ -7,7 +7,7 @@
   "documentation": "https://github.com/tschamm/boschshc-hass/blob/master/README.md",
   "iot_class": "local_push",
   "issue_tracker": "https://github.com/tschamm/boschshc-hass/issues",
-  "requirements": ["boschshcpy==0.2.83"],
+  "requirements": ["git+https://github.com/jumlu/boschshcpy@master#boschshcpy==0.2.86"],
   "version": "0.4.74",
   "zeroconf": [{ "type": "_http._tcp.local.", "name": "bosch shc*" }]
 }
